# raspberry-pico-2-dev

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  main.c  syscalls.c
cmake/: arm-toolchain.cmake
src/: Makefile  uart.h
src/led_blink/: CMakeLists.txt  Makefile  flash.ld  init.c  main.c
src/lib/: CMakeLists.txt  led.c  led.h
src/uart/: uart.c
